--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-emotion": "4.0.4",
     "gatsby-plugin-feed": "^2.0.14",
     "gatsby-plugin-google-analytics": "^2.0.15",
+    "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-postcss": "2.0.5",
     "gatsby-plugin-react-helmet": "3.0.7",
     "gatsby-plugin-sharp": "2.0.23",
@@ -45,6 +46,7 @@
     "gatsby-transformer-yaml": "2.1.8",
     "lodash": "4.17.11",
     "modern-normalize": "0.5.0",
+    "netlify-cms": "^2.6.0",
     "normalize.css": "8.0.1",
     "polished": "3.0.3",
     "postcss-color-function": "4.0.1",
