--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: src/content/img
-public_folder: /img
+public_folder: img
 
 collections:
   - name: blog
