--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,8 +5,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "static/img"
-public_folder: "public/img"
+media_folder: src/content/img
+public_folder: public/img
 
 collections:
   - name: blog
