--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,9 +6,10 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: src/content/img
-public_folder: public/img
+# media_folder: static/img
+public_folder: static/img
 
-collections:
+collections:  
   - name: blog
     label: Blog
     folder: src/content
