--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ publish_mode: editorial_workflow
 
 media_folder: src/content/img
 # media_folder: static/img
-public_folder: static/img
+public_folder: img
 
 collections:  
   - name: blog
