--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,9 +5,9 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: src/content/img
+media_folder: "src/content/img"
 # media_folder: static/img
-public_folder: img
+public_folder: "img"
 
 collections:  
   - name: blog
