--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "public/img"
+media_folder: "/img"
 # media_folder: static/img
 public_folder: "img"
 
